# emxu8

./: .clang-format  .gitignore  AGENTS.md  CMakeLists.txt  README.md
app/: .gitignore  CMakeLists.txt  main.cpp  ver.h
app/config/: binary.h  config.h
app/gui/: about.cpp  about.h  brkpoint.cpp  brkpoint.h  debugger.cpp  debugger.h  gui.h  hexed.cpp  hexed.h
app/gui/base/: about.cpp  about.h  brkpoint.cpp  brkpoint.h  brkpoint_panel.cpp  brkpoint_panel.h  debugger.cpp  debugger.h  emxu8.wxui  hexview.cpp  hexview.h  regcheckbox.h  regtextctrl.h
app/mcu/: mcu.cpp  mcu.h
app/msw/: app.manifest  app.rc
app/peripheral/: clockgen.cpp  clockgen.h  keyboard.cpp  keyboard.h  peripheral.h  screen.cpp  screen.h  standby.cpp  standby.h  tbc.cpp  tbc.h  timer.cpp  timer.h
docs/: FJUZ0317A0-U8-INST-05.md
include/emxu8/: compilerdefs.h  decoder.h  disassembler.h  emxu8.h  executor.h  fetcher.h  interrupter.h
src/: CMakeLists.txt  decoder.cpp  disassembler.cpp  emxu8.cpp  executor.cpp  fetcher.cpp  interrupter.cpp
